--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,6 @@ referencing==0.35.1
 rpds-py==0.20.0
 sqlparse==0.5.1
 uritemplate==4.1.1
+psycopg==3.1.12
+psycopg-binary==3.1.12
+psycopg2-binary==2.9.9
